many efforts to implement SSA destruction